- relativeOverfitting provides a way to estimate how much a model overfits to
  the training data according to a measure.
- restructured the LiblineaR learners to a more convenient format. These old ones were removed:
  classif.LiblineaRBinary, classif.LiblineaRLogReg,  classif.LiblineaRMultiClass.
  For the new ones, see below.

- new functions
-- getDefaultMeasure
-- getTaskClassLevels
-- getPredictionTruth, getPredictionResponse, getPredictionSE
-- convertMLBenchObjToTask
-- getBMRLearners, getBMRMeasures, getBMRMeasureIds
-- makeMultilabelTask, makeMultilabelWrapper, getMultilabelBinaryPerformances
-- generatePartialPredictionData, plotPartialPrediction, and plotPartialPredictionGGVIS
-- getClassWeightParam
-- plotBenchmarkResult, convertBMRToRankMatrix, generateRankMatrixAsBarData, plotRankMatrixAsBar,
   generateBenchmarkSummaryData, plotBenchmarkSummary,
   friedmanTestBMR, friedmanPostHocTestBMR, generateCritDifferencesData, plotCritDifferences
-- getCaretParamSet
-- generateCalibrationData and plotCalibration
-- relativeOverfitting
-- plotROCCurves

- new measures
-- hamloss

- new learners
-- multilabel.rFerns
-- classif.avNNet
-- classif.neuralnet
-- regr.avNNet
-- classif.clusterSVM
-- classif.dcSVM
-- classif.gaterSVM
-- classif.mlp
-- classif.saeDNN
-- classif.dbnDNN
-- classif.nnTrain
-- classif.rknn
-- regr.rknn
-- classif.xgboost
-- regr.xgboost
-- classif.rotationForest
-- classif.LiblineaRL1L2SVC
-- classif.LiblineaRL1LogReg
-- classif.LiblineaRL2L1SVC
-- classif.LiblineaRL2LogReg
-- classif.LiblineaRL1LMultiClassSVC
-- regr.LiblineaRL2L1SVR
-- regr.LiblineaRL2L2SVR
-- classif.ranger
-- regr.ranger
-- surv.ranger

- new filters
-- permutation.importance

- removed functions
-- setProperties, addProperties, removeProperties

mlr_2.4:
- WrappedModel printer was slightly improved
- ReampleResult now stores the runtime it took to resample in a slot
- getTaskFormula / getTaskFormulaAsString have new argument 'explicit.features'