@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/ResampleDesc.R
+% Please edit documentation in R/ResampleDesc.R, R/zzz.R
 \name{makeResampleDesc}
 \alias{ResampleDesc}
 \alias{makeResampleDesc}
@@ -75,6 +75,19 @@ Object slots:
 \item{predict [\code{character(1)}]}{See argument.}
 \item{stratify [\code{logical(1)}]}{See argument.}
 \item{All parameters passed in ... under the respective argument name}{See arguments.}
+}
+}
+\section{Standard ResampleDesc objects}{
+
+For common resampling strategies you can save some typing
+by using the following description objects:
+\describe{
+\item{hout}{holdout a.k.a. test sample estimation
+(two-thirds training set, one-third testing set)}
+\item{cv2}{2-fold cross-validation}
+\item{cv3}{3-fold cross-validation}
+\item{cv5}{5-fold cross-validation}
+\item{cv10}{10-fold cross-validation}
 }
 }
 \examples{
