@@ -46,6 +46,8 @@ mlr_2.5:
 - restructured the LiblineaR learners to a more convenient format. These old ones were removed:
   classif.LiblineaRBinary, classif.LiblineaRLogReg,  classif.LiblineaRMultiClass.
   For the new ones, see below.
+- Added some commonly used ResampleDesc description objects, to save typing in resample experiments:
+  hout, cv2, cv3, cv5, cv10.
 
 - new functions
 -- getDefaultMeasure
